--- a/web/name_list.html
+++ b/web/name_list.html
@@ -68,15 +68,40 @@
 
                 <form id="my-form">
                     <div class="form-group">
-                        <label for="firstName">First Name:</label>
                         <input type="hidden" id="id" name="id" class="form-control" /><br />
-                        <input type="text" id="firstName" name="firstName" class="form-control" placeholder="First name"/><br />
-                        <input type="text" id="lastName" name="lastName" class="form-control" placeholder="Last name"/><br />
-                        <input type="email" id="email" name="email" class="form-control" placeholder="Email address"/><br />
-                        <input type="phone_number" id="phone_number" name="phone_number" class="form-control" placeholder="Phone number"/><br />
-                        <input type="birthday" id="birthday" name="birthday" class="form-control" placeholder="Birthday"/><br />
+                        <div id="firstNameDiv" class="form-group has-feedback">
+                            <label class="control-label" for="firstName">First Name:</label>
+                            <input type="text" id="firstName" name="firstName" class="form-control" placeholder="First name" aria-describedby="firstNameStatus"/>
+                            <span id="firstNameGlyph" class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                            <span id="firstNameStatus" class="sr-only"></span> <!-- Text goes in firstNameStatus for screen readers that can't see our icons. -->
+                        </div>
+                        <div id="lastNameDiv" class="form-group has-feedback">
+                            <label class="control-label" for="lastName">Last Name:</label>
+                            <input type="text" id="lastName" name="lastName" class="form-control" placeholder="Last name" aria-describedby="lastNameStatus"/>
+                            <span id="lastNameGlyph" class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                            <span id="lastNameStatus" class="sr-only"></span>
+                        </div>
+                        <div id="emailDiv" class="form-group has-feedback">
+                            <label class="control-label" for="email">Email:</label>
+                            <input type="email" id="email" name="email" class="form-control" placeholder="Email address" aria-describedby="emailStatus"/>
+                            <span id="emailGlyph" class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                            <span id="emailStatus" class="sr-only"></span>
+                        </div>
+                        <div id="phone_numberDiv" class="form-group has-feedback">
+                            <label class="control-label" for="phone_number">Phone Number:</label>
+                            <input type="text" id="phone_number" name="phone_number" class="form-control" placeholder="Phone number" aria-describedby="phone_numberStatus"/>
+                            <span id="phone_numberGlyph" class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                            <span id="front_numberStatus" class="sr-only"></span>
+                        </div>
+                        <div id="birthdayDiv" class="form-group has-feedback">
+                            <label class="control-label" for="birthdayDiv">Birthday:</label>
+                            <input type="date" id="birthday" name="birthday" class="form-control" placeholder="Birthday" aria-describedby="birthdayStatus"/>
+                            <span id="birthdayGlyph" class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                            <span id="birthdayStatus" class="sr-only"></span>
+                        </div>
 
                     </div>
+
                 </form>
 
             </div>
