--- a/web/name_list.html
+++ b/web/name_list.html
@@ -66,7 +66,9 @@
             </div>
             <div class="modal-body">
 
-                <form id="my-form">
+
+
+                <form id="my-form" action="javascript:void(0);" >
                     <div class="form-group">
                         <input type="hidden" id="id" name="id" class="form-control" /><br />
                         <div id="firstNameDiv" class="form-group has-feedback">
@@ -106,7 +108,7 @@
 
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal" aria-label="Close">Close</button>
                 <button id="saveChanges" type="button" class="btn btn-primary">Save changes</button>
             </div>
         </div><!-- /.modal-content -->
