Added Delete button and values linked to deleting row.

--- a/web/name_list.html
+++ b/web/name_list.html
@@ -44,12 +44,19 @@
     <table id="datatable" class="table table-hover">
         <thead>
         <tr>
-            <th>Name</th>
+            <th>ID</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Phone Number</th>
+            <th>Email</th>
+            <th>Birthday</th>
+            <th>Delete Row</th>
+
         </tr>
         </thead>
         <tbody>
         <tr>
-            <td>No data</td>
+            <!--<td>No data</td>-->
         </tr>
         </tbody>
     </table>
