--- a/web/name_list.html
+++ b/web/name_list.html
@@ -51,6 +51,7 @@
             <th>Email</th>
             <th>Birthday</th>
             <th>Delete Row</th>
+            <th> Edit Row</th>
 
         </tr>
         </thead>
