--- a/web/index.html
+++ b/web/index.html
@@ -35,6 +35,7 @@
         <li><a href="javascript_assignment.html">Javascript Assignment</a></li>
         <li><a href="/api/name_list_get">Name List JSON</a></li>
         <li><a href="name_list.html">Name List</a></li>
+        <li><a href="login.html">Login</a></li>
       </ul>
     </div>
   </div>
@@ -43,7 +44,7 @@
 <div class="container">
   <h1>Anthony Russo's Index Page for CIS 320 Work</h1>
 
-  <p>Hello World. Let's list some people.</p>
+  <p>Hello World. Enjoy Anthony's work from CIS 320!</p>
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
